# 2048Game

./: .gitignore  CMakeLists.txt  README.md
include/: game.h  renderer.h
src/: game.cpp  main.cpp  renderer.cpp
